# business

./: README.md  business.cabal  stack.yaml
.circleci/: config.yml
app/: Main.hs
src/: Business.hs
test/: Spec.hs
