name:                business
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hmac/business#readme
license:             BSD3
license-file:        LICENSE
author:              Harry Maclean
maintainer:          harryjmaclean@gmail.com
copyright:           2017 Harry Maclean
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Business
  build-depends:       base >= 4.7 && < 5
                     , dates >= 0.2.2.1 && < 1
  default-language:    Haskell2010

executable business-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , business
  default-language:    Haskell2010

test-suite business-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , business
                     , hspec >= 2.4.4 && < 3
                     , dates >= 0.2.2.1 && < 1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hmac/business
